2014-03-17  Christopher Faylor  <me.cygwin2014@cgf.cx>

	* sigproc.h (no_thread_exit_protect): New class.
	* sigproc.cc (thread_exit): Use no_thread_exit_protect to determine if
	we need to coordinate ThreadExit/ExitProcess.
	* fhandler_dsp.cc (fhandler_dev_dsp::Audio_out::stop): Use
	no_thread_exit_protect to kludge around waiting for waveOutClose as it
	waits for a thread that never exits.
	(fhandler_dev_dsp::Audio_in::stop): Ditto for waveInClose.

2014-03-16  Christopher Faylor  <me.cygwin2014@cgf.cx>

	* fhandler.h (fhandler_dev_dsp::base): New method.
	(fhandler_dev_dsp::_read): Ditto.
	(fhandler_dev_dsp::_write): Ditto.
	(fhandler_dev_dsp::_ioctl): Ditto.
	(fhandler_dev_dsp::_fixup_after_fork): Ditto.
	(fhandler_dev_dsp::_fixup_after_exec): Ditto.
	* fhandler_dsp.cc (fhandler_dev_dsp::read): Call real function via
	base() pointer.
	(fhandler_dev_dsp::write): Ditto.
	(fhandler_dev_dsp::ioctl): Ditto.
	(fhandler_dev_dsp::fixup_after_fork): Ditto.
	(fhandler_dev_dsp::fixup_after_exec): Ditto.
	(fhandler_dev_dsp::_read): Rename by adding an leading underscore.
	(fhandler_dev_dsp::_write): Ditto.
	(fhandler_dev_dsp::_ioctl): Ditto.
	(fhandler_dev_dsp::_fixup_after_fork): Ditto.
	(fhandler_dev_dsp::_fixup_after_exec): Ditto.

2014-03-12  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/socket.h (IPV6_JOIN_GROUP): Revert.
	(IPV6_LEAVE_GROUP): Ditto.

2014-03-10  Christopher Faylor  <me.cygwin2014@cgf.cx>

	* fhandler.h (dev_console::b): Redefine as CONSOLE_SCREEN_BUFFER_INFO
	for use with older OS.
	* fhandler_console.cc (dev_console::fillin): Ditto for
	GetConsoleScreenBufferInfo.

2014-03-10  Christopher Faylor  <me.cygwin2014@cgf.cx>

	* fhandler_console.cc (dev_console::save_restore): Save entire line of
	current cursor position.

2014-03-09  Christopher Faylor  <me.cygwin2014@cgf.cx>

	* fhandler_console.cc (fhandler_console::save_restore): Save only until
	last written row and, because of this, don't bother trying to restore